# tubaanwar.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  about.qmd  contact.html  contact.qmd  index.html  index.qmd  projects.html  projects.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
_site/: about.html  contact.html  index.html  projects.html  search.json
_site/site_libs/github/workflows/: publish.yml
