[project]
name = "tubaanwar-github-io"
version = "0.0.1"
description = "Initial website for Tuba Anwar Github"
authors = [
    {name = "Tuba Anwar",email = "tuba15@bu.edu"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "tubaanwar"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
